# clgen

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
clgen/: __init__.py  cli.py  generator.py
clgen/command_groups/config/: __init__.py  config.py
clgen/command_groups/config/openai/: __init__.py  openai.py
tests/: test_cli_config.py  test_generator.py
