[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clgen"
version = "0.1.0"
description = "AI-powered changelog generator"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "James S. Lee", email = "sanghawk@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click~=8.1",
    "openai~=1.76",
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/sanghawk/clgen"
Repository = "https://github.com/sanghawk/clgen.git"
Documentation = "https://github.com/sanghawk/clgen#readme"

[project.scripts]
clgen = "clgen:main"

[tool.setuptools]
packages = ["clgen"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "flake8>=7.2.0",
    "pre-commit>=3.7.0",
] 